# voxel-game

./: .gitignore  BENCHMARK.md  CMakeLists.txt  PATCH3_EXPERIMENTS.md  README.md  blog.html  common.h  main.c  neural-physics.html  neural.c  neural.h  neural_simd.c  neural_simd.h  observation.c  observation.h  physics.c  physics.h  progress-log.md  sim.c  sim.h  spec.md  world.c  world.h
docs/: blog.html  progress-log.md  spec.md
models/: README.md
tools/: bench_all_models.py  bench_quant.py  bench_simd.py  benchmark.py  patch3_experiments.py  patch_sweep.py  patch_sweep_retrain.py  physics_sim.py  quantize_models.py  train.py
